# bmstu-labs

./: .gitignore  README.md
lisp/: 1.lisp  2.lisp  ~$lisp-2.drawio.bkp
lisp/02-functions/: 01-task2.lisp  02-task3.lisp  2.lisp  code.lisp  lisp-2.drawio  ~$lisp-2.drawio.bkp
mod/01-lab1/: main.py  report.aux  report.fdb_latexmk
mod/02-lab2/: report.fls  report.tex
mod/02-lab2/src/Mark02/: Mark02.pro  markovchart.cpp  markovchart.h  matrixinput.cpp  matrixinput.h
mod/02-lab2/src/build-Mark02-Desktop_Qt_5_12_12_clang_64bit-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp  moc_markovchart.cpp  moc_matrixinput.cpp  ui_mainwindow.h
mod/02-lab2/src/solver/: CMakeLists.txt  main.cpp
mod/03-lab3/: main.py
mod/03-lab3/queue/: dist.py  step.py
mod/exp/: main.cpp
mod/l1/: build.gradle  settings.gradle
mod/l2/: algos.py  main.py  result.txt
ms/l1/: l1.m  readme.md  vyb.txt
os-course/: 06-04-2020-RPD po preddiplomnoy praktike.pages  Вариант 12 - ДЗ - Искусственное освещение.pages
os/01-daemon/: daemon.c  my_daemon
os/02-fs-tree/: CMakeLists.txt  main.c  test.h
os/03-kernel-modules/01-part-1/: Makefile  md.c  print_module.c  seeker.c
prolog/prolog-1/code/: 11-1.pro  11-2.pro
prolog/prolog-1/docs/: report.aux  report.fdb_latexmk  report.fls
prolog/prolog-1/docs/tex/: main.aux  main.tex  preamble.inc.aux  title.aux  (+1 more)
prolog/prolog-2/: prog.pro
prolog/prolog-3/: lab.pro
sec/01-lab1/: Makefile
sec/03-des/: CMakeLists.txt  main.c
sec/04-rsa/: CMakeLists.txt
sec/04-rsa/src/: keys.cpp  keys.h  main.cpp  mymath.cpp  mymath.h  rsa.cpp  rsa.h
(+17 files in other folders)
